# USBSID-Pico-driver

./: .gitignore  Makefile.am  README.md  USBSID.cpp  USBSID.h  USBSIDInterface.cpp  USBSIDInterface.h  compiletest.md  testbuild.sh  usbsid.js
emscripten/: Makefile  README.md  buildemscripten.sh
emscripten/htdocs/: index.html  usbsid.js  usbsid.wasm  usbsidadapter.js  web.py
emscripten/libusbexample/: index.html  testlibusb.js  testlibusb.wasm
emscripten/src/: USBSID.cpp  USBSID.h  USBSIDAdapter.cpp
java/usbsid-usb-driver-library-java/: compile.md  dependency-reduced-pom.xml  pom-backup.xml  pom.xml
java/usbsid-usb-driver-library-java/lib/: README.md  libusb4java-1.3.0-win32-x86-64.jar.sha1  libusb4java-1.3.0-win32-x86.jar.sha1
java/usbsid-usb-driver-library-java/src/main/java/usbsid/: CfgCommand.java  Cmd.java  Command.java  Config.java  Device.java  IUSBSID.java  USBSID.java  USBSIDDevice.java
java/usbsid-usb-driver-library-java/src/test/java/: ConnectTest.java
java/usbsid-usb-driver-library-java/test/java/usbsid/: ConnectTest.java  LibUsbTest.java
java/usbsid-usb-driver-library-java/test/resources/: logging.properties
libusbsiddrv-vice/: USBSID.cpp  USBSID.h  USBSIDInterface.cpp  USBSIDInterface.h
src/: USBSID.cpp  USBSID.h  USBSIDInterface.cpp  USBSIDInterface.h
test/: c-test.c  compiletest.md  ctestbuild.sh  libtestbuild.sh
webusb/: usbsid.js
